--- a/templates/index.html
+++ b/templates/index.html
@@ -4,18 +4,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Генератор QR-кода</title>
+    <title>QR code generator</title>
 </head>
 
 <body>
     <div class="container">
-        <h1>Генератор QR-кода</h1>
+        <h1>QR code generator</h1>
         <form action="/generate" method="post">
             <div class="box">
-                <label for="data">Введите URL</label>
-                <input type="text" id="data" name="data" placeholder="Введите текст или URL - адрес">
+                <input type="text" id="data" name="data" placeholder="Enter text or URL">
             </div>
-            <button type="submit">Сгенерировать QR-код</button>
+            <button type="submit">Generate QR code</button>
         </form>
     </div>
     <style>
@@ -80,11 +79,13 @@
             font-family: "Space Mono", monospace;
         }
 
-        .form {
+        form {
             display: flex;
             flex-direction: column;
             justify-content: center;
             align-items: center;
+            gap: 30px;
+            width: 1000px;
         }
         .box{
             display: flex;
@@ -92,33 +93,34 @@
             justify-content: center;
             align-items: center;
             gap: 10px;
-        }
-
-        label {
-            color: #fff;
-            font-family: "Space Mono", monospace;
+            width: 90%;
         }
 
         input {
             background-color: #3a3a3a;
             color: #fff;
-            width: 1000px;
+            width: 100%;
             height: 40px;
             outline: none;
             padding: 20px;
             font-family: "Space Mono", monospace;
+            border-radius: 5px;
         }
 
         button {
             width: 300px;
             height: 50px;
+            border-radius: 5px;
             background-color: #3a3a3a;
             color: #fff;
             font-family: "Space Mono", monospace;
             font-size: 20px;
-            margin-left: 400px;
-            margin-top: 50px;
             cursor: pointer;
+        }
+        @media screen and (max-width:1000px){
+            form{
+                width: 100%;
+            }
         }
     </style>
 </body>
