--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/x-icon" href="{{ url_for('static', filename = 'favicon.ico') }}">
     <title>QR code generator</title>
 </head>
 
@@ -55,7 +56,9 @@
         html,
         body {
             height: 100%;
-            font-family: 'Poppins', sans-serif;
+            font-family: "ADLaM Display", system-ui;
+            font-weight: 900;
+            font-style: normal;
             background-color: rgb(209, 202, 211);
         }
 
@@ -76,7 +79,9 @@
             color: #fff;
             font-size: 20px;
             margin-top: 20px;
-            font-family: "Space Mono", monospace;
+            font-family: "ADLaM Display", system-ui;
+            font-weight: 900;
+            font-style: normal;
         }
 
         form {
@@ -103,7 +108,9 @@
             height: 40px;
             outline: none;
             padding: 20px;
-            font-family: "Space Mono", monospace;
+            font-family: "ADLaM Display", system-ui;
+            font-weight: 900;
+            font-style: normal;
             border-radius: 5px;
         }
 
@@ -113,7 +120,9 @@
             border-radius: 5px;
             background-color: #3a3a3a;
             color: #fff;
-            font-family: "Space Mono", monospace;
+            font-family: "ADLaM Display", system-ui;
+            font-weight: 900;
+            font-style: normal;
             font-size: 20px;
             cursor: pointer;
         }
